[BUGFIX] Ensure spacing for frames is applied when set to none

--- a/Resources/Public/Css/bootstrap4-theme.css
+++ b/Resources/Public/Css/bootstrap4-theme.css
@@ -11790,6 +11790,14 @@ ul.list-inline > li {
   background-size: auto;
 }
 
+.frame-space-before {
+  margin-top: var(--frame-outer-spacing-before, 0);
+}
+
+.frame-space-after {
+  margin-bottom: var(--frame-outer-spacing-after, 0);
+}
+
 .frame-space-before-none {
   --frame-outer-spacing-before: var(--frame-outer-spacing-variant-none);
 }
