--- a/Resources/Public/Css/bootstrap5-theme.css
+++ b/Resources/Public/Css/bootstrap5-theme.css
@@ -13644,6 +13644,14 @@ textarea.form-control.error {
   background-size: auto;
 }
 
+.frame-space-before {
+  margin-top: var(--frame-outer-spacing-before, 0);
+}
+
+.frame-space-after {
+  margin-bottom: var(--frame-outer-spacing-after, 0);
+}
+
 .frame-space-before-none {
   --frame-outer-spacing-before: var(--frame-outer-spacing-variant-none);
 }
